This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Typo in SyntaxError produced by pegen for numeric literals
Type: behavior Stage: resolved
Components: Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: hauntsaninja, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2020-05-04 03:06 by hauntsaninja, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 19893 merged hauntsaninja, 2020-05-04 03:07
Messages (2)
msg368006 - (view) Author: Shantanu (hauntsaninja) * Date: 2020-05-04 03:06
```
~ λ python3.9
Python 3.9.0a6+ (heads/master:c95e691, May  3 2020, 19:57:46) 
[Clang 11.0.0 (clang-1100.0.33.17)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import ast
>>> ast.parse("1_2", feature_version=(3, 5))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/Users/shantanu/.pyenv/versions/3.9-dev/lib/python3.9/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    1_2
    ^
SyntaxError: Underscores in numeric literals are only supportedin Python 3.6 and greater
```
msg368016 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2020-05-04 08:13
New changeset c3f001461d5794c81cf5f70e08ae5435fe935ceb by Shantanu in branch 'master':
bpo-40491: Fix typo in syntax error for numeric literals (GH-19893)
https://github.com/python/cpython/commit/c3f001461d5794c81cf5f70e08ae5435fe935ceb
History
Date User Action Args
2022-04-11 14:59:30adminsetgithub: 84671
2020-05-04 08:13:56serhiy.storchakasetstatus: open -> closed
type: behavior
stage: patch review -> resolved
resolution: fixed
versions: + Python 3.9
2020-05-04 08:13:33serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg368016
2020-05-04 03:07:28hauntsaninjasetkeywords: + patch
stage: patch review
pull_requests: + pull_request19204
2020-05-04 03:06:24hauntsaninjacreate