bpo-40491: Fix typo in syntax error for numeric literals (GH-19893)